buildscript {
	ext {
		springBootVersion = '2.2.5.RELEASE'
	}
	repositories {
		mavenCentral()
		maven {
			url "https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk"
		}
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '2.1.0.RELEASE'
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'war'


group = 'inflma'
//version = '0.0.1-SNAPSHOT'
sourceCompatibility = 11

repositories {
	mavenCentral()
}

dependencies {
	implementation ('org.springframework.boot:spring-boot-starter')
	implementation ('org.springframework.boot:spring-boot-starter-web')
	implementation ('org.springframework.boot:spring-boot-starter-thymeleaf')
	implementation ('org.springframework.boot:spring-boot-devtools:2.7.3')
	implementation("org.springframework.boot:spring-boot-starter-mail")


	//for database
	implementation 'com.zaxxer:HikariCP:5.0.1'
	implementation  'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation ('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2')
	implementation 'mysql:mysql-connector-java:8.0.30'
	implementation  group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'
	// https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
	implementation  group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.6.0'
	implementation ("org.springframework.boot:spring-boot-starter-data-jpa")


	// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
	implementation  group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.860'


	//for jsp
	implementation 'commons-lang:commons-lang:2.6'
	implementation  'javax.servlet:jstl'
	implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
	implementation 'org.projectlombok:lombok:1.18.22'

	//lombok
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	implementation 'org.projectlombok:lombok:1.18.24'

	//csv
	implementation  group: 'net.sf.supercsv', name: 'super-csv', version: '2.3.1'

	// json converter
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'

	testImplementation ('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2')

	// excel
	implementation 'org.apache.poi:poi-ooxml:4.1.2'
	implementation 'org.apache.poi:poi:4.1.2'
	implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'

	implementation 'commons-io:commons-io:2.11.0'    /* Apache commons-io */
	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' /* Apache Commons FileUpload */

	// webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// jackson
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// FCM push
	implementation 'com.google.firebase:firebase-admin:6.8.1'

	//okhttp3
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'

}

tasks.named('test') {
	useJUnitPlatform()
}
